# lakehouse-databricks-medalhao-study

./: 404.html  README.md  mkdocs.yml  pyproject.toml  sitemap.xml
Scripts/: 03_gold.ipynb
como-executar/: index.html
docs/: arquitetura.md  como-executar.md  index.md  notebooks.md
notebooks/: 00_landing_.ipynb  01_bronze.ipynb  02_silver.ipynb  index.html
search/: search_index.json
site/: 404.html  index.html
site/arquitetura/: index.html
site/como-executar/: index.html
site/search/: search_index.json
